change text to test CI/CD

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -96,7 +96,7 @@
                     <!-- /.col -->
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="post-about negative-margin">
-                            <h3 class="gradient-text">{{'About SIGL' | translate}}</h3>
+                            <h3 class="gradient-text">{{'About SIGL' | translate}} -New Text-</h3>
                             <p>
                                 {{"AboutText" | translate}}
                             </p>
@@ -541,7 +541,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col-xs-12 col-md-4">
                         <div class="box" style="width:100%;">
                             <div style="margin: 20px;" data-os-animation="fadeInDown">
