--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -40,7 +40,7 @@
                     <div class="item active">
                         <img class="d-block w-100" src="assets/images/background/bbq.png" alt="First slide">
                         <div class="title_containter">
-                            <h2 class="title_event">Barbecue SIGL</h2>
+                            <h2 class="title_event">Barbecue SIGL dddddddddddddddddddddd</h2>
                             <p class="subtitle_event">{{ "Sub_event1" | translate }}</p>
                         </div>
                     </div>
@@ -541,7 +541,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col-xs-12 col-md-4">
                         <div class="box" style="width:100%;">
                             <div style="margin: 20px;" data-os-animation="fadeInDown">
