update courses name

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -488,9 +488,9 @@
                                 </span>
                             </div>
                             <div class="info">
-                                <h4 class="text-center">{{"URSI" | translate}}</h4>
+                                <h4 class="text-center">{{"UBSI" | translate}}</h4>
                                 <p>
-                                    {{"URSIText" | translate}}
+                                    {{"UBSIText" | translate}}
                                 </p>
                             </div>
                         </div>
@@ -685,17 +685,17 @@
                         <div class="panel-heading" role="tab" id="headingFive">
                           <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3,#accordion4" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                              {{ "LM_CECI" | translate}}
+                              {{ "LM_CEC" | translate}}
                             </a>
                           </h4>
                         </div>
                         <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
                           <div class="panel-body">
                             <h4><b>Christophe Andreu</b></h4>
-                            <h5>{{ "CECI_JOB" | translate }}</h5>
+                            <h5>{{ "CEC_JOB" | translate }}</h5>
                             <h5><b>{{"OBJ" | translate}}</b></h5>
-                            <p>{{"LM_CECI_text1" | translate }}</p>
-                            <p>{{"LM_CECI_text2" | translate }}</p>
+                            <p>{{"LM_CEC_text1" | translate }}</p>
+                            <p>{{"LM_CEC_text2" | translate }}</p>
                           </div>
                         </div>
                       </div>
@@ -715,20 +715,20 @@
                             <div class="panel-heading" role="tab" id="headingOne">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3,#accordion4" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                        {{ "LM_URSI" | translate}}
+                                        {{ "LM_UBSI" | translate}}
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <h4><b>Jean-Christophe Ferry</b></h4>
-                                    <h5>{{ "URSI_JOB1" | translate }}</h5>
-                                    <h5>{{ "URSI_JOB2" | translate }}</h5>
+                                    <h5>{{ "UBSI_JOB1" | translate }}</h5>
+                                    <h5>{{ "UBSI_JOB2" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
-                                    <p>{{"LM_URSI_text1" | translate }}</p>
-                                    <p>{{"LM_URSI_text2" | translate }}</p>
-                                    <p>{{"LM_URSI_text3" | translate }}</p>
-                                    <p>{{"LM_URSI_text4" | translate }}</p>
+                                    <p>{{"LM_UBSI_text1" | translate }}</p>
+                                    <p>{{"LM_UBSI_text2" | translate }}</p>
+                                    <p>{{"LM_UBSI_text3" | translate }}</p>
+                                    <p>{{"LM_UBSI_text4" | translate }}</p>
                                 </div>
                             </div>
                         </div>
@@ -834,19 +834,19 @@
                             <div class="panel-heading" role="tab" id="headingOne">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3,#accordion4" href="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
-                                        {{ "LM_ARLA" | translate}}
+                                        {{ "LM_SOCRA" | translate}}
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <h4><b>Lucas Boisserie & Florent Fauchille</b></h4>
-                                    <h5>{{ "ARLA_JOB1" | translate }}</h5>
-                                    <h5>{{ "ARLA_JOB2" | translate }}</h5>
+                                    <h5>{{ "SOCRA_JOB1" | translate }}</h5>
+                                    <h5>{{ "SOCRA_JOB2" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
-                                    <p>{{ "LM_ARLA_text1" | translate}}</p>
-                                    <p>{{ "LM_ARLA_text2" | translate}}</p>
-                                    <p>{{ "LM_ARLA_text3" | translate}}</p>
+                                    <p>{{ "LM_SOCRA_text1" | translate}}</p>
+                                    <p>{{ "LM_SOCRA_text2" | translate}}</p>
+                                    <p>{{ "LM_SOCRA_text3" | translate}}</p>
                                 </div>
                             </div>
                         </div>
@@ -1064,19 +1064,19 @@
                             <div class="panel-heading" role="tab" id="headingSix">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1,#accordion2,#accordion3,#accordion4" href="#collapseTwentyTwo" aria-expanded="false" aria-controls="collapseTwentyTwo">
-                                        {{ "LM_PERS" | translate}}
+                                        {{ "LM_PIT" | translate}}
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseTwentyTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
                                 <div class="panel-body">
                                     <h4><b>Frédéric Fourdrinier & Hervé Durand</b></h4>
-                                    <h5>{{ "PERS_JOB1" | translate }}</h5>
-                                    <h5>{{ "PERS_JOB2" | translate }}</h5>
+                                    <h5>{{ "PIT_JOB1" | translate }}</h5>
+                                    <h5>{{ "PIT_JOB2" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
-                                    <p>{{"LM_PERS_text1" | translate}} </p>
-                                    <p>{{"LM_PERS_text2" | translate}}</p>
-                                    <p>{{"LM_PERS_text3" | translate}}</p>
+                                    <p>{{"LM_PIT_text1" | translate}} </p>
+                                    <p>{{"LM_PIT_text2" | translate}}</p>
+                                    <p>{{"LM_PIT_text3" | translate}}</p>
                                 </div>
                             </div>
                         </div>
