PMDE : Yassine Chertouk en nouveau prof

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1010,7 +1010,7 @@
                             </div>
                             <div id="collapseNineteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    <h4><b>Julien Guisset</b></h4>
+                                    <h4><b>Yassine Chertouk</b></h4>
                                     <h5>{{ "PMDE_JOB" | translate }}</h5>
                                     <h5><b>{{"OBJ" | translate}}</b></h5>
                                     <p>{{"LM_PMDE_text1" | translate}}</p>
