--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -65,6 +65,13 @@
                             <p class="subtitle_event">{{ "Sub_event4" | translate }}</p>
                         </div>
                     </div>
+                    <div class="item">
+                        <img class="d-block w-100" src="assets/images/background/SIGL2023_PhotoDeClasse.jpg" alt="Fifth slide">
+                        <div class="title_containter">
+                            <h2 class="title_event">{{ "Title_event5" | translate }}</h2>
+                            <p class="subtitle_event">{{ "Sub_event5" | translate }}</p>
+                        </div>
+                    </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
