--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -35,6 +35,7 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                 </ol>
                 <div class="carousel-inner img-brightness img-size" style="z-index: -1">
                     <div class="item active">
@@ -62,14 +63,12 @@
                         <img class="d-block w-100" src="assets/images/background/disintegration.jpg" alt="Fourth slide">
                         <div class="title_containter">
                             <h2 class="title_event">{{ "Title_event4" | translate }}</h2>
-                            <p class="subtitle_event">{{ "Sub_event4" | translate }}</p>
                         </div>
                     </div>
                     <div class="item">
                         <img class="d-block w-100" src="assets/images/background/SIGL2023_PhotoDeClasse.jpg" alt="Fifth slide">
                         <div class="title_containter">
                             <h2 class="title_event">{{ "Title_event5" | translate }}</h2>
-                            <p class="subtitle_event">{{ "Sub_event5" | translate }}</p>
                         </div>
                     </div>
                 </div>
