--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1324,7 +1324,7 @@
 
         <div class="row">
           <div class="col align-self-center text-center">
-            <a href="mailto:deleguessigl@gmail.com?subject=[FAQ][SIGL] Question du site vitrine&body=Bonjour,%0D%0A%0D%0AL'étudiant {{name}} {{lastName}} ({{mail}}) vous a envoyé cette question via la FAQ du site vitrine :%0D%0A%0D%0A{{question}}
+            <a href="mailto:siwebofficiel@gmail.com?subject=[FAQ][SIGL] Question du site vitrine&body=Bonjour,%0D%0A%0D%0AL'étudiant {{name}} {{lastName}} ({{mail}}) vous a envoyé cette question via la FAQ du site vitrine :%0D%0A%0D%0A{{question}}
             %0D%0A%0D%0ACordialement,%0D%0A%0D%0A-- %0D%0AFAQ site vitrine SIGL" onclick="if(window.confirm('Êtes-vous sûr de vouloir envoyer ce courriel ?')){window.open(this.href);} return false;" class="dark-btn">
                  &emsp;{{"Submit" | translate}}</a>
           </div>
